# decorator-utils

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-pypi.yaml
decorator_utils/: __init__.py  context.py  metadata.py  wrapper.py
decorator_utils/decorators/: benchmark.py
docs/: generate_docs.py
